-- ============================================================================
-- VALORIZE PLATFORM - PART 1: CORE TABLES
-- Database Migration Phase 1 - Essential Business Entities
-- ============================================================================

-- This file contains the fundamental tables required for basic platform operation:
-- - User management (users, profiles, addresses) 
-- - Core business entities (initiatives, rewards)
-- - Basic relationships and constraints
-- - Essential indexes for performance

-- ============================================================================
-- CORE USER MANAGEMENT
-- ============================================================================

CREATE TABLE "user" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(200) NOT NULL,
  "avatar" varchar(400),
  "email" varchar(200) NOT NULL UNIQUE,
  "password" text NOT NULL, -- Store hashed passwords
  "coins_to_donate" int NOT NULL DEFAULT 0 CHECK (coins_to_donate >= 0),
  "coins_to_spend" int NOT NULL DEFAULT 0 CHECK (coins_to_spend >= 0),
  "active" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW()
);

CREATE TABLE "address" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_user" int NOT NULL,
  "nickname" varchar(100) NOT NULL,
  "default_address" boolean NOT NULL DEFAULT false,
  "active" boolean NOT NULL DEFAULT true,
  "cpf" varchar(20), -- Brazilian tax ID - optional for international users
  "zip_code" varchar(15) NOT NULL, -- Increased for international postal codes
  "street" varchar(200) NOT NULL, -- Increased length for international addresses
  "number" varchar(20), -- Changed to varchar for addresses like "123A"
  "city" varchar(100) NOT NULL, -- Increased for international cities
  "neighborhood" varchar(100),
  "complement" varchar(100),
  "state" varchar(50) NOT NULL, -- Increased for international states/provinces
  "country" varchar(2) NOT NULL DEFAULT 'BR', -- ISO country code
  "reference" varchar(200),
  "created_at" timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- GAMIFICATION CORE TABLES
-- ============================================================================

CREATE TABLE "initiatives" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(200) NOT NULL,
  "description" text NOT NULL,
  "image" varchar(500), -- Increased for URLs
  "coins" int NOT NULL CHECK (coins > 0),
  "active" boolean NOT NULL DEFAULT true,
  "visible" boolean NOT NULL DEFAULT true,
  "rules" jsonb, -- Changed to jsonb for better performance
  "tags" jsonb, -- Changed to jsonb for better performance
  "link" varchar(500), -- Increased for full URLs
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW()
);

CREATE TABLE "credits" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "date" timestamptz NOT NULL DEFAULT NOW(),
  "id_user" int NOT NULL,
  "id_initiative" int NOT NULL,
  "quantity" int NOT NULL CHECK (quantity > 0),
  "created_at" timestamptz NOT NULL DEFAULT NOW()
);

CREATE TABLE "compliment" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "date" timestamptz NOT NULL DEFAULT NOW(),
  "id_sender_user" int NOT NULL,
  "id_receiver_user" int NOT NULL,
  "quantity" int NOT NULL CHECK (quantity > 0),
  "company_value" varchar(100) NOT NULL,
  "description" varchar(1000) NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- REWARDS SYSTEM CORE
-- ============================================================================

CREATE TABLE "rewards" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(200) NOT NULL,
  "image" varchar(500),
  "description" text NOT NULL,
  "price" decimal(10,2) NOT NULL CHECK (price > 0), -- Better for monetary values
  "active" boolean NOT NULL DEFAULT true,
  "category" varchar(100) NOT NULL,
  "brand" varchar(100),
  "redeemed" int NOT NULL DEFAULT 0 CHECK (redeemed >= 0),
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW(),
  "limited" boolean NOT NULL DEFAULT false,
  "slug" varchar(100) NOT NULL UNIQUE -- Increased length for SEO-friendly URLs
);

CREATE TABLE "stock" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_reward" int NOT NULL, -- Fixed naming consistency
  "characteristic" varchar(100) NOT NULL, -- Size, color, etc.
  "quantity" int NOT NULL CHECK (quantity >= 0) -- Changed from smallint for scalability
);

CREATE TABLE "redeem" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "date" timestamptz NOT NULL DEFAULT NOW(),
  "id_user" int NOT NULL,
  "id_reward" int NOT NULL,
  "id_address" int, -- Optional - some rewards might not require shipping
  "purchased" boolean NOT NULL DEFAULT false,
  "delivery_estimate" date,
  "cancelled" boolean NOT NULL DEFAULT false,
  "received_date" date,
  "cost" decimal(10,2) NOT NULL CHECK (cost >= 0), -- Better precision
  "carrier" varchar(100),
  "tracking_code" varchar(100),
  "observations" text, -- Increased length for detailed notes
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- FAQ SYSTEM
-- ============================================================================

CREATE TABLE "doubts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "question" varchar(500) NOT NULL, -- Increased length
  "answer" text NOT NULL,
  "tags" jsonb, -- Better performance than json
  "active" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- ADMIN SYSTEM (RBAC) - BASIC
-- ============================================================================

CREATE TABLE "admin_roles" (
  "name" varchar(50) PRIMARY KEY,
  "description" varchar(200) NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT NOW()
);

CREATE TABLE "admin_permissions" (
  "name" varchar(50) PRIMARY KEY,
  "description" varchar(200) NOT NULL, -- Added description for clarity
  "created_at" timestamptz NOT NULL DEFAULT NOW()
);

CREATE TABLE "permissions_to_roles" (
  "role_name" varchar(50) NOT NULL,
  "permission_name" varchar(50) NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  PRIMARY KEY ("role_name", "permission_name")
);

CREATE TABLE "admin_users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(200) NOT NULL UNIQUE, -- Increased length, added unique
  "avatar" varchar(500),
  "name" varchar(100) NOT NULL, -- Increased length
  "role" varchar(50) NOT NULL,
  "active" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT NOW(),
  "updated_at" timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- CORE FOREIGN KEY CONSTRAINTS
-- ============================================================================

-- User relationships
ALTER TABLE "address" ADD FOREIGN KEY ("id_user") REFERENCES "user" ("id") ON DELETE CASCADE;

-- Credits system
ALTER TABLE "credits" ADD FOREIGN KEY ("id_user") REFERENCES "user" ("id") ON DELETE CASCADE;
ALTER TABLE "credits" ADD FOREIGN KEY ("id_initiative") REFERENCES "initiatives" ("id") ON DELETE RESTRICT;

-- Compliments system
ALTER TABLE "compliment" ADD FOREIGN KEY ("id_sender_user") REFERENCES "user" ("id") ON DELETE CASCADE;
ALTER TABLE "compliment" ADD FOREIGN KEY ("id_receiver_user") REFERENCES "user" ("id") ON DELETE CASCADE;

-- Rewards system
ALTER TABLE "stock" ADD FOREIGN KEY ("id_reward") REFERENCES "rewards" ("id") ON DELETE CASCADE;
ALTER TABLE "redeem" ADD FOREIGN KEY ("id_user") REFERENCES "user" ("id") ON DELETE CASCADE;
ALTER TABLE "redeem" ADD FOREIGN KEY ("id_reward") REFERENCES "rewards" ("id") ON DELETE RESTRICT;
ALTER TABLE "redeem" ADD FOREIGN KEY ("id_address") REFERENCES "address" ("id") ON DELETE SET NULL;

-- Admin system
ALTER TABLE "admin_users" ADD FOREIGN KEY ("role") REFERENCES "admin_roles" ("name") ON DELETE RESTRICT;
ALTER TABLE "permissions_to_roles" ADD FOREIGN KEY ("role_name") REFERENCES "admin_roles" ("name") ON DELETE CASCADE;
ALTER TABLE "permissions_to_roles" ADD FOREIGN KEY ("permission_name") REFERENCES "admin_permissions" ("name") ON DELETE CASCADE;

-- ============================================================================
-- CORE BUSINESS CONSTRAINTS
-- ============================================================================

-- Prevent self-compliments
ALTER TABLE "compliment" ADD CONSTRAINT "no_self_compliment" 
  CHECK ("id_sender_user" != "id_receiver_user");

-- Only one default address per user
CREATE UNIQUE INDEX "idx_user_default_address" ON "address" ("id_user") 
  WHERE "default_address" = true AND "active" = true;

-- ============================================================================
-- ESSENTIAL INDEXES FOR PERFORMANCE
-- ============================================================================

-- User management indexes
CREATE INDEX "idx_user_email" ON "user" ("email");
CREATE INDEX "idx_user_active" ON "user" ("active");
CREATE INDEX "idx_address_user" ON "address" ("id_user");
CREATE INDEX "idx_address_active" ON "address" ("active");

-- Business logic indexes
CREATE INDEX "idx_credits_user" ON "credits" ("id_user");
CREATE INDEX "idx_credits_date" ON "credits" ("date");
CREATE INDEX "idx_credits_initiative" ON "credits" ("id_initiative");
CREATE INDEX "idx_compliment_receiver" ON "compliment" ("id_receiver_user");
CREATE INDEX "idx_compliment_sender" ON "compliment" ("id_sender_user");
CREATE INDEX "idx_compliment_date" ON "compliment" ("date");

-- Rewards system indexes
CREATE INDEX "idx_rewards_active" ON "rewards" ("active");
CREATE INDEX "idx_rewards_category" ON "rewards" ("category");
CREATE INDEX "idx_rewards_price" ON "rewards" ("price");
CREATE INDEX "idx_redeem_user" ON "redeem" ("id_user");
CREATE INDEX "idx_redeem_date" ON "redeem" ("date");
CREATE INDEX "idx_redeem_status" ON "redeem" ("cancelled", "purchased");

-- JSON indexes for better performance
CREATE INDEX "idx_initiatives_tags" ON "initiatives" USING gin("tags");
CREATE INDEX "idx_doubts_tags" ON "doubts" USING gin("tags");

-- ============================================================================
-- CORE TRIGGERS & FUNCTIONS
-- ============================================================================

-- Function to update updated_at timestamp
CREATE OR REPLACE FUNCTION update_updated_at_column()
RETURNS TRIGGER AS $$
BEGIN
  NEW.updated_at = NOW();
  RETURN NEW;
END;
$$ language 'plpgsql';

-- Apply to core tables
CREATE TRIGGER update_user_updated_at BEFORE UPDATE ON "user" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER update_initiatives_updated_at BEFORE UPDATE ON "initiatives" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER update_rewards_updated_at BEFORE UPDATE ON "rewards" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER update_redeem_updated_at BEFORE UPDATE ON "redeem" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER update_doubts_updated_at BEFORE UPDATE ON "doubts" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER update_admin_users_updated_at BEFORE UPDATE ON "admin_users" 
  FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

-- ============================================================================
-- INITIAL ADMIN DATA
-- ============================================================================

-- Basic admin roles
INSERT INTO "admin_roles" ("name", "description") VALUES
('SUPER_ADMIN', 'Full system access and configuration'),
('ADMIN', 'General administrative access'),
('MODERATOR', 'Content moderation and user management'),
('VIEWER', 'Read-only access to admin panels');

-- Basic admin permissions
INSERT INTO "admin_permissions" ("name", "description") VALUES
('USER_MANAGEMENT', 'Create, update, delete users'),
('CONTENT_MANAGEMENT', 'Manage initiatives, rewards, and content'),
('ANALYTICS_VIEW', 'View analytics and reports'),
('SYSTEM_CONFIG', 'Configure system settings'),
('AUDIT_VIEW', 'View audit logs and security events');

-- Assign permissions to roles
INSERT INTO "permissions_to_roles" ("role_name", "permission_name") VALUES
('SUPER_ADMIN', 'USER_MANAGEMENT'),
('SUPER_ADMIN', 'CONTENT_MANAGEMENT'),
('SUPER_ADMIN', 'ANALYTICS_VIEW'),
('SUPER_ADMIN', 'SYSTEM_CONFIG'),
('SUPER_ADMIN', 'AUDIT_VIEW'),
('ADMIN', 'USER_MANAGEMENT'),
('ADMIN', 'CONTENT_MANAGEMENT'),
('ADMIN', 'ANALYTICS_VIEW'),
('MODERATOR', 'USER_MANAGEMENT'),
('MODERATOR', 'CONTENT_MANAGEMENT'),
('VIEWER', 'ANALYTICS_VIEW');

-- ============================================================================
-- VALIDATION QUERIES
-- ============================================================================

-- Verify table creation and relationships
SELECT 
  t.table_name,
  COUNT(c.column_name) as column_count,
  COUNT(tc.constraint_name) as constraint_count
FROM information_schema.tables t
LEFT JOIN information_schema.columns c ON t.table_name = c.table_name
LEFT JOIN information_schema.table_constraints tc ON t.table_name = tc.table_name
WHERE t.table_schema = 'public' 
  AND t.table_type = 'BASE TABLE'
GROUP BY t.table_name
ORDER BY t.table_name;

-- Check indexes
SELECT 
  schemaname,
  tablename,
  indexname,
  indexdef
FROM pg_indexes 
WHERE schemaname = 'public'
ORDER BY tablename, indexname;

-- ============================================================================
-- NOTES FOR PART 2
-- ============================================================================

/*
PART 1 COMPLETE - Core tables ready for basic platform operation

Next (Part 2 - Business Logic Enhancement):
- Company values system (structured approach)
- Advanced coin transaction tracking  
- Praise reaction system
- Enhanced reward categorization
- Business rule validations
- Performance monitoring tables

Dependencies established:
✅ User system with basic authentication
✅ Address management 
✅ Basic gamification (initiatives, credits, compliments)
✅ Rewards and redemption system
✅ Admin role-based access control
✅ Essential performance indexes
*/ 