// ✅
Table doubts {
  id int [pk, increment]
  question varchar(300)
  answer text
  tags json
}

// ✅
Table compliment {
  id int [pk, increment]
  date timestamp
  id_sender_user int [ref: > user.id]
  id_receiver_user int [ref: > user.id]
  quantity int
  company_value varchar(100)
  description varchar(1000) // verify which data type is better
}

// ✅
Table address {
  id int [pk, increment]
  id_user int [ref: > user.id]
  nickname varchar(100)
  default_address boolean
  active boolean
  cpf varchar(20)
  zip_code varchar(10)
  street varchar(75)
  number int
  city varchar(30)
  neighborhood varchar(75)
  complement varchar(30)
  state varchar(5)
  reference varchar(50)
}

Table credits {
  id int [pk, increment]
  date timestamp
  id_user int [ref: > user.id]
  id_initiative int [ref: > initiatives.id] // maybe should be a nullable field
  quantity int
  // description varchar(600)
}

Table initiatives {
  id int [pk, increment]
  title varchar(200)
  description varchar(1000)
  image varchar(200)
  coins int
  active boolean
  visible boolean
  rules json
  tags json
  link varchar(50)
}

Table rewards {
  id int [pk, increment]
  title varchar(200)
  // quantity int // this should be on stock
  image varchar(400)
  description varchar(500)
  price int
  active boolean
  category varchar(50)
  brand varchar(50)
  redeemed int [default: 0] // maybe this field shoudn't be here
  created_at date [default: `now()`]
  updated_at date [default: `now()`]
  limited boolean [default: false] // just one redeem by user
  slug varchar(50) [unique]
}

Table stock {
  id int [pk, increment]
  id_prize int [ref: > rewards.id]
  characteristic varchar(30)
  quantity smallint
}

Table redeem {
  id int [pk, increment]
  date timestamp
  id_user int [ref: > user.id]
  id_reward int [ref: > rewards.id]
  id_address int
  purchased boolean
  delivery_estimate date
  cancelled boolean
  received_date date
  cost real
  carrier varchar(50)
  tracking_code varchar(50)
  observations varchar(50)
}

Table user {
  id int [pk, increment]
  name varchar(200)
  avatar varchar(200)
  email varchar(200)
  password varchar(200)
  coins_to_donate int
  coins_to_spend int
  active boolean
}

Table admin_users {
  id int [pk, unique, increment]
  email varchar(50)
  avatar varchar(200)
  name varchar(30)
  role varchar(50) [ref: > admin_roles.name]
}

Table admin_roles {
  name varchar(50) [pk]
  description varchar(200)
}

Table admin_permissions {
  name varchar(50) [pk]
}

Table permissions_to_roles {
  role_name varchar(50) [pk, ref: > admin_roles.name]
  permission_name varchar(50) [pk, ref: > admin_permissions.name]
}